# mountaineer

./: pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  paired-programming-checkpoint.md
docs/: proposal.md
notebooks/.ipynb_checkpoints/: map-dev-checkpoint.ipynb  mountaineer-dev-checkpoint.ipynb
src/mountaineer/: __init__.py  map.py
src/mountaineer/.ipynb_checkpoints/: data-checkpoint.py
